--- a/Course/Day1/state_events1/src/App.css
+++ b/Course/Day1/state_events1/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  margin-top: 20%;
+  margin-left: 50%;
+  padding: 50px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 1px #fff;
+  cursor: pointer;
 }
 
 .App-logo {
